--- a/QtApplShrenamer/.gitignore
+++ b/QtApplShrenamer/.gitignore
@@ -49,15 +49,15 @@ Thumbs.db
 *.idb
 *.ilk
 *.pdb
-*.sln
+#*.sln
 *.suo
 *.vcproj
 *vcproj.*.*.user
 *.ncb
 *.sdf
 *.opensdf
-*.vcxproj
-*vcxproj.*
+#*.vcxproj
+#*vcxproj.*
 
 # MinGW generated files
 *.Debug
